styles/globals.scss
@import 'variables';
@import 'typography';
@import 'layout';
@import 'nav';

html {
	overflow-y: auto;
	overflow-y: overlay;
	overflow-x: auto;
	overflow-x: hidden;
}

html.noscroll {
	overflow-y: hidden;
	.header {
		margin-right: 17px
	}
}

body.dots {
	background-image: radial-gradient(#ddd 1px,transparent 0), radial-gradient(#ddd 1px, transparent 0);
	background-position: 0 0, 25px 25px;
	background-size: 50px 50px;
}

@-ms-viewport {
  width: device-width;
}

